esse titulo novamente

--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div id="cabecalho">
+    <header id="cabecalho">
+        <h1 id="titulo">Project Trybe</h1>
     <a href="#">home</a>
     <a href="#">login</a>
-        </div>
-            <h1 id="titulo">Project Trybe</h1>
     </header>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
