--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <article id="experiencia">
             <p>Iniciar uma transição de carreira aos 32 não é nada fácil. Várias dúvidas surgem e com elas vem a insegurança: Será que estou fazendo a opção correta?</p><p>Logo que ingressei na Trybe essas dúvidas se dissiparam. Aqui nós temos um sistema de ensino que realmente vale apena o investimento do tempo e dinheiro.</p><p>Como diz o querido Jack, primeiro nós damos os <em>baby steps</em> e depois de 10 dias de aulas e cronograma intenso já estamos prontos para dar o primeiro passo!</p><p>Tudo isso só é possível com muita dedicação e claro ter o suporte de um time incrível!</p>
         </article>
-        <aside>
+        <aside id="aside">
             <p><em>O primeiro desafio da Trybe veio para provar o quanto pude aprender nesse curto espaço de tempo. Só tenho a agradecer ao mestre Jack, Zezé e Panta sempre dispostos a tirar as mínimas dúvidas, Karina sempre acolhedora e o Bruno dando aquele gás na soft skills.Lets que lets!</em></p>
         </aside>
 <table class="table"><thehead><th>Checklist de atividades realizadas - Modulo 1 </th></thehead>
