--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
             <article id="artigo">
                 <h3>Trecho do livro Os trabalhadores do mar:</h3>
-                Olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.Quem ama quer,e aquele que quer relampeja e cintila.A resolução enche os olhos de fogo:admiravel fogo que se compõem da combustão de pensamentos timidos.
+                Olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.
             </article>
         </article>
         <aside id="aside">
