Finalizei todos os requisitos

--- a/index.html
+++ b/index.html
@@ -56,11 +56,16 @@
                 <p>Publicado em 24/08/2021</p>
             </footer>
         </div>
-        <div>
+        <section>
             <article>
                 <h2>Sobre meu aprendizado:</h2>
                 <p>Atualmente estou cursando desenvolvimento de software web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank">Trybe!</a>. Após dez dias de curso aprendi Unix e Bash, já adquiri prática em HTML e CSS e vou iniciar JavaScript. <br>O curso conta com uma formação completa em desenvolvimento de software web, além de aprender como lidar no mercado de trabalho, através das  softskills. No momento, estou desenvolvendo minhas softskills, dentre elas, a que mais tenho dificuldade é a comunicação, pois sou uma pessoa extremamente tímida, mas até o final do curso espero ter desenvolvido isso.</p>
             </article>
-        </div>
+       
+            <aside>
+                <h2>Resumo sobre meu aprendizado:</h2>
+                <p>Aprendi Unix e Bash, conheci e adquiri prática em Git e GitHub, estou me aprofundando em HTML e CSS, além de começar a desenvolver minhas softskills, como exemplo, empatia.</p>
+            </aside>
+        </section>
     </body>
 </html>
