--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
-    <section><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
-      <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p></section>
-      <section>
-        <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
+    <section id="section_up"><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
+      <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
+      <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
         <p><a href="https://www.linkedin.com/in/fasouzarj" target="_blank">Flávio Alves</a></p>
       </section>
     <nav>
