Requisito 15 e Ajustes finais

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <img id="minha_foto"
             src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg"
             alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
-        <section>
+        <section class= "lado-esquerdo">
+            <h2><b>Lições Aprendidas</b></h2>
             <ol id="licoes_aprendidas">
                 <li>Unix & Bash</li>
                 <li>O que é o Git & GitHub</li>
@@ -31,7 +32,8 @@
                 <li>Entendendo as emoções</li>
             </ol>
         </section>
-        <section>
+        <section class="lado-direito">
+            <h2>Lições a aprender</h2>
             <ul id="licoes_a_aprender">
                 <li>Flexbox</li>
                 <li>JavaScript</li>
