--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <nav id="links_externos">
         <ul>
             <li>
-                <a href="https://www.linkedin.com/in/hugo-maximiano-brito-62ab7a190/" target="_blank">Meu Linkkedin </a> 
+                <a href="https://www.linkedin.com/in/hugo-maximiano-brito-62ab7a190/" target="_blank">Meu Linkkedin (opens new window)</a> 
             </li>
             <li>
                 <a href="https://github.com/hugomaximiano" target="_blank"> Meu GitHub</a>
