--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
             </aside>
         </main>
 
-        <footer id="rodape">Rodape</footer>
+        <footer id="rodape">Lesson Learned-01</footer>
     </body>
 </html>
