--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <title>HTML</title>
 </head>
 <body>
-    <h1>Lições aprendidas - Trybe!</h1>
+    <h1 id="cabecalho">Lições aprendidas - Trybe!</h1>
     
     <img src="./fotoSlack06082021.png" alt="Rosto de homen preto cabelo black power tirando foto em frente ao espelho com celular na mão"> 
     
