--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 			<h1 id="titulo">Lessons Learned</h1>
 			<nav id="navegacao"><a class="link" href="#namassa">Mão na massa</a>  |<a class="link" href="#estudartrybe">Estudar na Trybe</a>  |<a class="link" href="https://www.betrybe.com/" target="_blank">Site Trybe</a></nav>
 		</header>
-		<section>
+		<section id="apresentacao">
 			<div id="divfoto">
 				<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
 			</div>
 			<div id="divnome">
-				<aside>
-				<h2 id="namassa">Mão na massa</h2>
-				<p>A Trybe nos ajuda a aprender programação colocando a mão na massa e interagindo com pessoas das mais diferentes regiões, basta ter conexão com a internet.</p>
+				<aside id="namassa">
+				  <h2>Mão na massa</h2>
+				  <p>A Trybe nos ajuda a aprender programação colocando a mão na massa e interagindo com pessoas das mais diferentes regiões, basta ter conexão com a internet.</p>
+          <p>Leandro Silva</p>
 				</aside>
-				<p>Leandro Silva</p>
 			</div>
 		</section>
-		<main>
+		<main id="principal">
 			<article>
 				<h1 id="estudartrybe">Estudar na Trybe</h1>
-				<p>Falta palavras para descrever o aprendizado com a Trybe. Então exemplifico dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
+				<p>Como descrever o aprendizado na Trybe? Posso dizer que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
 			</article>
 			<table border="5" id="tabela">
 				<tr>
