--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     </ul>
 </section>
    <nav><a href="https://www.linkedin.com/in/nathalia-fonseca-miranda/" target="_blank">LinkedIn</a></nav>
- <article>
+ <article class="lado-esquerdo">
       <h3>Aprendizado</h3>
       <p>Nestas ultimas 3 semanas na Trybe pude aprender um pouco de html, css e também sobre git e github. Além disso, já aprendi também um pouco sobre softs skills e sua importância no mercado de trabalho. Não tinha contato com programação antes, então ver minha evolução me anima e me deixa cada vez mais certa de que estar na Trybe foi a melhor escolha que fiz para minha vida profissional. </p>
   </article>
- <section>
+ <section class="lado-direito">
   <p>Estudar na Trybe</p>
-</aside>
-Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios.
 <aside>
+Aprender não tem sido fácil, mas com muita dedicação, horas de estudos, ajuda dos colegas do curso e suporte nas mentorias da Trybe, tenho conseguido entender e aplicar o conhecimento de forma prática nos exercícios.
+</aside>
   </section>
   <p>Na tabela a seguir constam informações sobre dicas para estudar</p>
 <table> 
