Atinge 100% dos requisitos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    
+
     <header id="cabecalho">
 
         <h1 id="titulo"><strong>Projeto Trybe <br>Learned Lessons</strong></h1>
@@ -30,7 +32,7 @@
     </nav>
 
     <img src="imagem/perfil.jpeg" alt="minha_foto" id="minha_foto">
-
+    <a href="https://www.youtube.com/watch?v=QYcnf_7uFLA" target="_blank">link Aleatorio</a>
     <h2>Listas de Lições</h2>
 
     
