--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="UTF-8"/>
   <title>Portfolio of lessons learned</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,6 +17,31 @@
  <div>
   <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de perfil Hugo Maximiano"> 
  </div> 
+
+ <div>
+  <table>
+    <tr>
+      <td>-</td>
+      <td>Conteúdo</td>
+    </tr>
+    <tr>
+      <td>Modulo 1</td>
+      <td>Fundamentos do desenvolvimento Web</td>
+    </tr>
+    <tr>
+      <td>Modulo 2</td>
+      <td>Desnvolvimento Front-end</td>
+    </tr>
+    <tr>
+      <td>Modulo 3</td>
+      <td>Desnvolvimento Back-end</td>
+    </tr>
+    <tr>
+      <td>Modulo 4</td>
+      <td>Ciencia da Computação</td>
+    </tr>
+  </table>
+</div> 
 
  <section id="licoes">
   <div>
@@ -52,6 +78,7 @@
       </h2>
   </div>  
 </section>
+
 <section > 
     <article id="artigo">
         <p>I've always had a lot of ease in learning, and I always thought it was good to have new challenges, bored with simple things. In the course of Trybe tedio does not happen, I am always being pretended to the maximum. The intensity at which the content is presented follows a frenetic speed 200km/h. Anyone committed has a prejudge.</p>
