--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
   <header id="cabecalho" class="header">
     <h1 id="titulo">Lessons Learned</h1>
   </header>
-  <nav class="navigation">
-    <ul class="nav_list">
-      <li><a href="#cabecalho">Início</a></li>
-      <li><a href="#licoes_aprendidas">Lições</a></li>
-      <li><a href="#meu_aprendizado">Meu aprendizado</a></li>
-      <li><a href="#progresso">Progresso</a></li>
-      <li><a href="https://github.com/tainnaps" target="_blank">Github</a></li>
+  <nav class="navigation-bar">
+    <ul>
+      <li class="navigation-item"><a class="navigation-link"
+          href="#cabecalho">Início</a></li>
+      <li class="navigation-item"><a class="navigation-link"
+          href="#licoes_aprendidas">Lições</a></li>
+      <li class="navigation-item"><a class="navigation-link"
+          href="#meu_aprendizado">Meu aprendizado</a></li>
+      <li class="navigation-item"><a class="navigation-link"
+          href="#progresso">Progresso</a></li>
+      <li class="navigation-item"><a class="navigation-link"
+          href="https://github.com/tainnaps" target="_blank">Github</a></li>
     </ul>
   </nav>
   <div class="content">
-    <section class="learned section_setup">
+    <section class="learn-section">
       <h2>Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>Conhecer sistemas baseados em Unix</li>
@@ -42,7 +47,7 @@
     <img id="minha_foto"
       src="https://media-exp1.licdn.com/dms/image/C4D03AQGNzMBMSt9ARQ/profile-displayphoto-shrink_800_800/0/1628638444292?e=1635379200&v=beta&t=ppkX48-iCDbSTrt333QTNw3CuyHcgXSi_iFDUWnOFJU"
       alt="Jovem preta com cabelo cacheado solto vista de frente">
-    <section class="to_learn section_setup">
+    <section class="learn-section">
       <h2>Lições a Aprender</h2>
       <ul id="licoes_a_aprender">
         <li>Desenvolver códigos em JavaScript</li>
