--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 			<div id="divnome">
 				<aside id="namassa">
 				  <h2>Mão na massa</h2>
-				  <p>A Trybe nos ajuda a aprender programação colocando a mão na massa e interagindo com pessoas das mais diferentes regiões, basta ter conexão com a internet.</p>
+				    <div id="aspaFrase">
+              <span id="aspa">‟</span><p id="frase">A Trybe nos ajuda a aprender programação colocando a mão na massa e interagindo com pessoas das mais diferentes regiões, basta ter conexão com a internet.</p>
+            </div>
           <p>Leandro Silva</p>
 				</aside>
 			</div>
 		</section>
 		<main id="principal">
-			<article>
+			<article id="artigo">
 				<h1 id="estudartrybe">Estudar na Trybe</h1>
 				<p>Como descrever o aprendizado na Trybe? Posso dizer que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
 			</article>
@@ -43,8 +45,6 @@
 							<li>Html semântico</li>
 						</ol>
 					</td>
-				</tr>
-				<tr>
 					<td>
 						<ul id="licoes_a_aprender">
 							<li>Javascript</li>
@@ -62,6 +62,13 @@
 					</tr>
 			</table>	
 		</main>	
-		<footer id="rodape">Jeito <a href="https://www.betrybe.com/" target="_blank">tryber</a> de ser</footer>
+		<footer id="rodape">
+      <div id="fraseFinal">
+        <a href="https://www.betrybe.com/" target="_blank">Jeito tryber de ser 🚀</a>
+      </div>
+      <div id="assinatura">
+        Desenvolvido por <i>Leandro Chagas da Silva</i> como requisito para aprovação no projeto 1 do curso de desenvolvimento web da <i>Trybe</i> | Turma 16 | Agosto de 2021.
+      </div>
+    </footer>
   </body>
 </html>
