--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 
 	<header id="cabecalho">
-	    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+	      <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
 	</header>
 
+  <main>
     <figure>
         <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
     </figure>
 
     <nav id="social-icons">
-    <a href="https://github.com/Andre-S-Melo" target="_blank">GitHub</a>
+        <a href="https://github.com/Andre-S-Melo" target="_blank">GitHub</a>
     </nav>
 
-    <ol id="licoes_aprendidas">
+    <section>
+      <h2> Lições Aprendidas</h2>
+      <ol id="licoes_aprendidas">
         <li>Slack</li>
         <li>Zoom</li>
         <li>Unix</li>
@@ -32,9 +41,12 @@
         <li>HTML</li>
         <li>CSS</li>
         <li>HTML Semântico</li>
-    </ol>
+      </ol>
+    </section>
 
-    <ul id="licoes_a_aprender">
+    <section>
+      <h2> Lições a Aprender</h2>
+      <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
         <li>Forms</li>
@@ -45,13 +57,18 @@
         <li>React</li>
         <li>Node</li>
         <li>SQL</li>
-    </ul>
+      </ul>
+    </section>
+
+    <article id="article-style">
+        <h2>A Dor de Aprender</h2>
+        <p>Eu não imaginava que eu teria tanta dificuldade no início, sobre o que exatamente eu deveria no minimo estar sabendo ao final de cada bloco? Eu pensei bastante sobre isso e descobri que minha maior dificuldade tem sido <em>"Aprender a aprender"</em>. A dor de aprender é frustrante e dolorosa, me tira a concentração e o foco, mas será que já não estou dentro desse processo de <em>"Aprendendo a Aprender?"</em> Bom! Ainda não sei, mas espero descobrir até o final dessa jornada.</p>
+    </article>
 
     <footer id="rodape">
         <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!"</em> | Go Trybe.</p>
     </footer>
 
-
- 
+  </main>
 </body>
 </html>
