--- a/index.html
+++ b/index.html
@@ -8,65 +8,84 @@
    <link rel="stylesheet" href="style.css">
  </head>
  <body>
-   <!-- Cabeçalho da página -->
+   <!-- Cabeçalho da página  -->
    <header id="cabecalho">
      <a href="https://www.betrybe.com" target="_blank"><img src="trybe_logo.png" alt="Trybe" id="minha_foto"></a>
      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <!-- Barra de navegação  -->
+     <nav id="navegacao">
+       <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn</a>
+       <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub</a>
+     </nav>
    </header>
-
-   <!-- Barra de navegação -->
-   <nav id="navegacao">
-     <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn</a>
-     <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub</a>
-   </nav>
-
-   <!-- Containers da seção de lições -->
-   <section id="container_licoes">
-     <ol id="licoes_aprendidas">
-      <h2>Lições aprendidas</h2>
-         <li>Unix & Bash</li>
-         <li>Execução de comandos no terminal</li>
-         <li>Manipulação de arquivos e diretórios</li>
-         <li>Controle de alterações e versionamentarquivos</li>
-         <li>Estruturar páginas com HTML</li>
-         <li>HTML Semântico</li>
-         <li>Estilização com CSS</li>
-         <li>Seletores e Posicionamento</li>
-         <li>Inteligência emocional</li>
-         <li>Soft Skills</li>
-       </ol>
-       <ul id="licoes_a_aprender">
-        <h2>Lições à aprender</h2>
-         <li>Linguagem de programação JavaScript</li>
-         <li>Lógica de Programação e Algoritmos</li>
-         <li>Arrays e loop for</li>
-         <li>Orientação à Objetos</li>
-         <li>Funções</li>
-         <li>DOM</li>
-         <li>Eventos</li>
-         <li>Web Storage</li>
-         <li>CSS Flexbox</li>
-         <li>Design Responsivo</li>
-       </ul>
-   </section>
-
-   <!-- Container da seção de artigos -->
-   <section class="container_lados">
-     <div class="lado-esquerdo">
-       <article>
-         No Curso de Desenvolvimento Web da  <a href="https://www.betrybe.com" target="_blank">Trybe</a> tenho aprendido bastante sobre como é o universo do desenvolvimento. No módulo de Fundamentos Web já aprendi sobre O unix e seus comandos, sobre controle de versão de arquivos  diretórios e sobre HTML e CSS. Também nesse ínicio já fui introduzido aos conhecimentos sobre soft-skills e sobre como são competências importantes no dia-a-dia dos desenvolvedores.
-       </article>
+   <main id="container-principal">
+     <div class="container-lado-esquerdo">
+       <div class="lado-esquerdo">
+         <section>
+					 <article>
+						 No Curso de Desenvolvimento Web da  <a href="https://www.betrybe.com" target="_blank">Trybe</a> tenho aprendido bastante sobre como é o universo do desenvolvimento. No módulo de Fundamentos Web já aprendi sobre O unix e seus comandos, sobre controle de versão de arquivos  diretórios e sobre HTML e CSS. Também nesse ínicio já fui introduzido aos conhecimentos sobre soft-skills e sobre como são competências importantes no dia-a-dia dos desenvolvedores.
+					 </article>
+         </section>
+       </div>
+       <div class="lado-direito">
+         <aside>
+          O que venho aprendendo na aulas de soft-skills me tem feito refletir bastante sobre como preciso trabalhar melhor minha inteligência emocional. Os temas iniciais como a própria emoção e sobre a empatia me fazem pensar sobre o que realmente eu sei sobre mim.
+         </aside>
+       </div>
      </div>
-     <div class="lado-direito">
-       <aside>
-         O que venho aprendendo na aulas de soft-skills me tem feito refletir bastante sobre como preciso trabalhar melhor minha inteligência emocional. Os temas iniciais como a própria emoção e sobre a empatia me fazem pensar sobre o que realmente eu sei sobre mim.
-       </aside>
+     <div class="container-tabela">
+       <table>
+         <thead>
+           <th>Módulo</th>
+           <th>Nº de Blocos</th>
+         </thead>
+         <tr>
+           <td>Fundamentos Web</td>
+           <td class="celula">10</td>
+         </tr>
+         <tr>
+          <td>Front-end</td>
+          <td class="celula">9</td>
+        </tr>
+        <tr>
+          <td>Back-end</td>
+          <td class="celula">13</td>
+        </tr>
+        <tr>
+          <td>Ciência da computação</td>
+          <td class="celula">6</td>
+        </tr>
+       </table>
      </div>
-   </section>
-
-   <!-- Rodapé da página -->
-   <footer id="rodape">
-     <span>Todos os direitos reservados à Bruno Ribeiro</span>
-   </footer>
+        <ol id="licoes_aprendidas">
+          <h2>Lições aprendidas</h2>
+             <li>Unix & Bash</li>
+             <li>Execução de comandos no terminal</li>
+             <li>Manipulação de arquivos e diretórios</li>
+             <li>Controle de alterações e versionamentarquivos</li>
+             <li>Estruturar páginas com HTML</li>
+             <li>HTML Semântico</li>
+             <li>Estilização com CSS</li>
+             <li>Seletores e Posicionamento</li>
+             <li>Inteligência emocional</li>
+             <li>Soft Skills</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+              <h2>Lições à aprender</h2>
+              <li>Linguagem de programação JavaScript</li>
+              <li>Lógica de Programação e Algoritmos</li>
+              <li>Arrays e loop for</li>
+              <li>Orientação à Objetos</li>
+              <li>Funções</li>
+              <li>DOM</li>
+              <li>Eventos</li>
+              <li>Web Storage</li>
+              <li>CSS Flexbox</li>
+              <li>Design Responsivo</li>
+        </ul>
+    </main>
+		<footer id="rodape">
+			<span>Todos os direitos reservados à Bruno Ribeiro</span>
+		</footer>
  </body>
 </html>
