--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <p>Eu não imaginava que eu teria tanta dificuldade no início, sobre o que exatamente eu deveria no minimo estar sabendo ao final de cada bloco? Eu pensei bastante sobre isso e descobri que minha maior dificuldade tem sido <em>"Aprender a aprender"</em>. A dor de aprender é frustrante e dolorosa, me tira a concentração e o foco, mas será que já não estou dentro desse processo de <em>"Aprendendo a Aprender?"</em> Bom! Ainda não sei, mas espero descobrir até o final dessa jornada.</p>
     </article>
 
+    <aside id="aside-style">
+      <h2>Aprendendo a Aprender</h2>
+      <p>Será que aprender a aprender é aprender com os erros? Ainda não descobri isso, mas se tem uma coisa que eu já descobri e aprendi é que: <em>"Não existe pergunta boba, bobeira é não perguntar!"</em></p>
+    </aside>
+
     <footer id="rodape">
         <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!"</em> | Go Trybe.</p>
     </footer>
