15. Posicione o seu artigo e a seção sobre aprendizados um ao lado do outro

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <h1 id="titulo">Lições Aprendidas - TRYBE! 🚀</h1>
 
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Links</a>
+        <a href="#container_image">Início</a>
+        <a href="#container_licoes">Lições</a>
+        <a href="#container_conteudos">Aprendizado</a>
+        <a href="#tabela">Tabela</a>
     </nav>
   </header>
 
@@ -60,18 +62,18 @@
 
     <div id="container_conteudos">
       <article class="lado-esquerdo">
-        <h4>Meu aprendizado</h4>
+        <h3>Meu aprendizado</h3>
         No dia 9 de agosto de 2021, iniciei minha jornada na Trybe. Aprendi sobre o Unix que é composto pelo kernel e Shell e a interagir com este; sobre Git e GitHub, ambos são repositórios onde seram armazenados seus códigos, um localmente na sua máquina e o outro de forma remota em nuvem; sobre HTML e CSS, descobri que através deles é possivel criar páginas na web e estilizadas de acordo com a minha criatividade. Outras ferramentas que aprendi foram o Zoom e o Slack que servem para a comunicação entre a equipe.
       </article>
 
       <section class="lado-direito">
         <div id="conteudo_lado_direito">
-          <h4>Como foi?</h4>
+          <h3>Como foi?</h3>
           Tive que dedicar bastante tempo para conseguir aprender e fixar todo o conteúdo passado pelo curso, além das seis horas de duração do curso da Trybe, dedico mais quatro horas para revisar e praticar todo o conteúdo. No começo foi difícil me adaptar a nossa rotina, mas como eu tinha me decidido que era isso que eu queria, com foco, consigo hoje estudar tranquilamente dez horas diarias.<br><br>
         </div>
 
         <aside id="conteudo_a_parte">
-            <h4>Links:</h4>
+            <h3>Links:</h3>
             A trybe é uma excelente escola de programação que vai te ajudar a se tornar um Desenvolver Web, acesso o <a href="https://www.betrybe.com/?utm_medium=cpc&utm_source=google&utm_campaign=Brand&utm_content=ad03_din_h&gclid=CjwKCAjw1JeJBhB9EiwAV612y5sX75aD0eMPptZPckrufbFSwiuYWT_xfiFkiID-MbosAO8IoyZlARoCoT0QAvD_BwE" target="_blank">Link</a> e descubra mais.<br><br>
 
             Meu portfólio: <a href="https://jonataspassos96.github.io/" target="_blank">GitHub</a><br><br>
@@ -127,9 +129,9 @@
   </main>
 
   <footer id="rodape">
-    <h4>
+    <h3>
       Todos os direitos reservados, Jonatas ®
-    </h4>
+    </h3>
   </footer>
 </body>
 </html>
