--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   </head>
   <body>
       <header>
-      <nav id="cabecalho">
+      <div id="cabecalho">
         <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
-          <ul>  
-            <a href="home"><li>Home</li></a>
-            <a href="sobre"><li>About me</li></a>
-          </ul>
-      </nav>
+      </div>
+      <div>
+        <img src="foto.jpg" id="minha_foto">
+      </div>
       </header>
-      <p><img src="foto.jpg" id="minha_foto"></p>
-      <p><h1>Lições Aprendidas</p></h1>
+      <section id="secao1">
+      <p><h3>Lições Aprendidas</h3></p>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
@@ -28,6 +27,24 @@
           <li>Seletores de posicionamento</li>
           <li>HTML Semântico</li>
           <li>JavaScript</li>
-      </ol>
+        </ol>
+      </section>
+      <aside id="aside1">
+      <p><h3>Lições a aprender</p></h3>
+      <ul id="licoes_a_aprender">
+          <li>Aprofundamento em JavaScript</li>
+          <li>Logica de programação</li>
+          <li>Playground Functions</li>
+          <li>Seletores</li>
+          <li>Elementos</li>
+          <li>Web Storage</li>
+          <li>Forms</li>
+          <li>Flexbox</li>
+          <li>Responsivo</li>
+          <li>JavaScript Assíncrono</li>
+      </ul>
+      </aside>
+      <p><h3>Confira o meu perfil no Github, clicando no link abaixo</h3></p>
+      <a href="https://github.com/LucasBertarelli" target="blank">Clique aqui!</a>
   </body>
 </html>
