--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       <header>
       <div id="cabecalho">
         <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
+        <nav>
+          <a href="https://github.com/LucasBertarelli" target="blank">Github</a>
+        </nav>
       </div>
       <div>
         <img src="foto.jpg" id="minha_foto">
@@ -29,7 +32,7 @@
           <li>JavaScript</li>
         </ol>
       </section>
-      <aside id="aside1">
+      <div id="div1">
       <p><h3>Lições a aprender</p></h3>
       <ul id="licoes_a_aprender">
           <li>Aprofundamento em JavaScript</li>
@@ -43,8 +46,16 @@
           <li>Responsivo</li>
           <li>JavaScript Assíncrono</li>
       </ul>
+    </div>
+      <article id="artigo"><p><h3>Como cheguei na Trybe?</h3></p>
+      <p>Tenho 34 anos, sou pai de uma linda menina de 7 anos, chamada Lara.<br> Já trabalhei com muita coisa, e tenho formação em música.<br> Nasci em São Paulo capital, onde vivo até hoje.<br> Há muito tempo tenho sentido vontade de voltar a estudar.<br> E a Trybe surgiu em minha vida no melhor momento.<br> Decidi embarcar nessa e daqui só saio quando o curso terminar!</p></article>
+      <aside id="aside1">
+        <p><h3>Sobre o meu aprendizado</p></h3>
+        <p>Entrar na Trybe já não foi fácil!<br>A gente fez uma prova de Javascript que pra mim foi super difícil.<br>O curso é bem puxado e a gente tem que estudar muito. Estou aprendendo muita coisa!</p>
       </aside>
-      <p><h3>Confira o meu perfil no Github, clicando no link abaixo</h3></p>
-      <a href="https://github.com/LucasBertarelli" target="blank">Clique aqui!</a>
+      <footer id="rodape">
+        Espero que tenham gostado!
+      </footer>
+    
   </body>
 </html>
