--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 	</header>
 
   <main>
-    <figure>
-        <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
-    </figure>
-
     <nav id="social-icons">
         <a href="https://github.com/Andre-S-Melo" target="_blank">GitHub</a>
     </nav>
 
-    <section>
+    <figure>
+        <img id="minha_foto" src="Images/WSE.jpg" alt="André Melo no jardim da escola de idiomas WSE em Wimbledon/London-UK">
+    </figure>
+
+    <section class="lado-esquerdo">
       <h2> Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>Slack</li>
@@ -44,7 +44,7 @@
       </ol>
     </section>
 
-    <section>
+    <section class="lado-direito">
       <h2> Lições a Aprender</h2>
       <ul id="licoes_a_aprender">
         <li>JavaScript</li>
@@ -71,7 +71,7 @@
     </aside>
 
     <footer id="rodape">
-        <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!"</em> | Go Trybe.</p>
+        <p><em>"Acredito que somos movidos pelas nossas paixões e se a sua paixão também é Codar... vale a pena investir nesse sonho!" </em> | Go Trybe.</p>
     </footer>
 
   </main>
