--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 		<header id="cabecalho">
 			<h1 id="titulo">Lessons Learned</h1>
-			<nav id="navegacao"><a class="link" href="#namassa">Mão na massa</a>  |<a class="link" href="#estudartrybe">Estudar na Trybe</a>  |<a class="link" href="https://www.betrybe.com/" target="_blank">Site Trybe</a></nav>
+			<nav id="navegacao"><a class="link" href="#namassa">Mão na massa</a> | <a class="link" href="#estudartrybe">Estudar na Trybe</a> | <a class="link" href="https://www.betrybe.com/" target="_blank">Site Trybe</a></nav>
 		</header>
 		<section id="apresentacao">
 			<div id="divfoto">
@@ -25,11 +25,11 @@
 			</div>
 		</section>
 		<main id="principal">
-			<article id="artigo">
+			<article  class="lado-esquerdo">
 				<h1 id="estudartrybe">Estudar na Trybe</h1>
 				<p>Como descrever o aprendizado na Trybe? Posso dizer que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
 			</article>
-			<table border="5" id="tabela">
+			<table border="5" class="lado-direito">
 				<tr>
 					<td>
 						<ol id="licoes_aprendidas">
@@ -67,7 +67,7 @@
         <a href="https://www.betrybe.com/" target="_blank">Jeito tryber de ser 🚀</a>
       </div>
       <div id="assinatura">
-        Desenvolvido por <i>Leandro Chagas da Silva</i> como requisito para aprovação no projeto 1 do curso de desenvolvimento web da <i>Trybe</i> | Turma 16 | Agosto de 2021.
+        Feito por <i>Leandro Chagas da Silva</i> como requisito para aprovação no projeto 1 do curso de desenvolvimento web da <i>Trybe</i> | Turma 16 | Agosto de 2021.
       </div>
     </footer>
   </body>
