--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div >
             
             <section >
-                <div class="aprendi">
+                <div class="lado-esquerdo">
                   <article>
-                    <p id="artigo">Olá, me chamo Luis Gustavo sou estudante da trybe, estou fazendo uma mudança de carreira
+                    <p>Olá, me chamo Luis Gustavo sou estudante da trybe, estou fazendo uma mudança de carreira
                     no qual estudava engenheira mecânica e agora vou ser um DEV na trybe com uma equipe de bastante
                     qualidade com as ferramentas necessárias para concluir um curso dificil e bem intensivo, e já 
                     botando a famosa "mão na massa" aprendendo um pouco sobre git,github, html, css e aprendendo
@@ -29,8 +29,8 @@
                    </article>
                 </div>
 
-                <div class="vouaprender">
-                  <aside id="artigo">Uma passagem de aprendizado que tive foi quando não estava conseguindo realizar
+                <div class="lado-direito">
+                  <aside>Uma passagem de aprendizado que tive foi quando não estava conseguindo realizar
                 o comando git push e sempre dando erro, até que com ajuda de amigos na trybe consegui
                 aprender e entender bem isso.</aside>
                 </div>
