--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				    <div id="aspaFrase">
               <span id="aspa">‟</span><p id="frase">A Trybe nos ajuda a aprender programação colocando a mão na massa e interagindo com pessoas das mais diferentes regiões, basta ter conexão com a internet.</p>
             </div>
-          <p>Leandro Silva</p>
+          <p><b>Leandro Silva</b></p>
 				</aside>
 			</div>
 		</section>
