atualização de elementos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
     <article><h3>Artigo Sobre Aprendizado</h3></article>
     
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ducimus molestias dicta quas ipsam commodi in odio. Cumque quis omnis, voluptatibus sed, tempora asperiores similique soluta molestias itaque deleniti esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ducimus molestias dicta quas ipsam commodi in odio. Cumque quis omnis, voluptatibus sed, tempora asperiores similique soluta molestias itaque deleniti esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ducimus molestias dicta quas ipsam commodi in odio. Cumque quis omnis, voluptatibus sed, tempora asperiores similique soluta molestias itaque deleniti esse.</p>
+    <p>Tem sido gratificante o meu processo de aprendizado aqui na Trybe, todo dia aprendemos um assunto novo ou sobre uma habilidade a ser desenvolvida no decorrer do curso, Hoje estudando aqui na Ed Tech tenho certeza que fiz a escolha certa para me qualificar para carreira de developer me tornando um profissional de auto nível, nunca tinha utilizado o método de aprender a aprender antes mas vendo isso na prática o método da Trybe e de longe o melhor método para aprender a programar.</p>
 
     <hr>
     
