--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div> 
 
  <section id="licoes">
-  <div>
+  <div class="tabela">
    <h2>
     <ol id="licoes_aprendidas">
      <li>Fundamentals of development</li>
@@ -68,7 +68,7 @@
    </h2>
   </div>
 
-  <div>
+  <div class="tabela">
       <h2>
           <ul id="licoes_a_aprender">
               <li>Lógica de Programação</li>
