--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <main id="main">
         <nav id="nav">
             <ul>
-                <li id="externo"><a href="https://www.linkedin.com/in/brunolorenzonlouzada/" target="_blank">Meu Linkedin</a></li>
-                <li id="externo"><a href="https://www.instagram.com/brunollouzada/" target="_blank">Meu Insta</a></li>
-                <li id="externo"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Descubra...</a></li>
+                <li class="externo"><a href="https://www.linkedin.com/in/brunolorenzonlouzada/" target="_blank">Meu Linkedin</a></li>
+                <li class="externo"><a href="https://www.instagram.com/brunollouzada/" target="_blank">Meu Insta</a></li>
+                <li class="externo"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Descubra...</a></li>
             </ul>
         </nav>
         <section id="secao">
             <section>
                 <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
-                <section id="secao_list">
-                    <h3>Lições aprendidas:</h3>
+                <section class="secao_list">
+                    <h2>Lições aprendidas:</h2>
                     <br>
                     <ol id="licoes_aprendidas">
                         <li>Unix</li>
@@ -38,8 +38,8 @@
                         <li>Empatia</li>
                     </ol>
                 </section>
-                <section id="secao_list">
-                    <h3>Lições a aprender:</h3>
+                <section class="secao_list">
+                    <h2>Lições a aprender:</h2>
                     <br>
                     <ul id="licoes_a_aprender">
                         <li>Java</li>
@@ -56,12 +56,12 @@
                 </section>
             </section>
             <article id="artigo">
-                <h3>Trecho do livro Os trabalhadores do mar:</h3>
+                <h2>Trecho do livro Os trabalhadores do mar:</h2>
                 Olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.
             </article>
         </section>
         <aside id="aside">
-        <h3>Trecho de A Náusea:</h3>
+        <h2>Trecho de A Náusea:</h2>
         Gostaria tanto de me abandonar, de deixar de ter consciência de minha existência, de dormir. Mas não posso, sufoco: a existência penetra em mim por todos os lados, pelos olhos, pelo nariz, pela boca… 
         </aside>
     </main>
