--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Projeto | Lessons Learned</title>
    <link rel="stylesheet" href="style.css">
  </head>
  <body>
    <!-- Cabeçalho da página  -->
    <header id="cabecalho">
-     <a href="https://www.betrybe.com" target="_blank"><img src="trybe_logo.png" alt="Trybe" id="minha_foto"></a>
+     <img src="trybe_logo.png" alt="Imagem do logotipo da Escola de programação Trybe" id="minha_foto">
      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
     <!-- Barra de navegação  -->
      <nav id="navegacao">
-       <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn</a>
-       <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub</a>
+       <a href="https://www.linkedin.com/in/bruno-csr-ribeiro" target="_blank">LinkedIn<!--(will open a new window for the website)--></a>
+       <a href="https://github.com/brunocsrribeiro" target="_blank">GitHub<!--(will open a new window for the website)--></a>
      </nav>
    </header>
    <main id="container-principal">
@@ -23,7 +23,7 @@
        <div class="lado-esquerdo">
          <section>
 					 <article>
-						 No Curso de Desenvolvimento Web da  <a href="https://www.betrybe.com" target="_blank">Trybe</a> tenho aprendido bastante sobre como é o universo do desenvolvimento. No módulo de Fundamentos Web já aprendi sobre O unix e seus comandos, sobre controle de versão de arquivos  diretórios e sobre HTML e CSS. Também nesse ínicio já fui introduzido aos conhecimentos sobre soft-skills e sobre como são competências importantes no dia-a-dia dos desenvolvedores.
+						 No Curso de Desenvolvimento Web da Trybe tenho aprendido bastante sobre como é o universo do desenvolvimento. No módulo de Fundamentos Web já aprendi sobre O unix e seus comandos, sobre controle de versão de arquivos  diretórios e sobre HTML e CSS. Também nesse ínicio já fui introduzido aos conhecimentos sobre soft-skills e sobre como são competências importantes no dia-a-dia dos desenvolvedores.
 					 </article>
          </section>
        </div>
@@ -85,7 +85,9 @@
         </ul>
     </main>
 		<footer id="rodape">
-			<span>Todos os direitos reservados à Bruno Ribeiro</span>
+      <section>
+        <span>Todos os direitos reservados à Bruno Ribeiro</span>
+      </section>
 		</footer>
  </body>
 </html>
