--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <h2>Aprendizado</h2>
   <section class="principal">
       <article>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quis nemo ipsum officia doloribus, perferendis culpa nam neque odit, modi corrupti nulla velit ullam laborum similique, quaerat quae fugit temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quos natus laudantium dolore. Explicabo quis excepturi voluptatum quaerat labore blanditiis eos nostrum distinctio officiis id. Vel pariatur recusandae quidem dolores.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto cum voluptatem iste fuga hic quae natus, aliquam odio ratione, sint molestiae non vitae expedita, tenetur dolorem quisquam harum alias! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio voluptatem labore facilis ipsum autem minus, itaque cum! Quas laboriosam tempora repellat iure molestiae, impedit vitae perspiciatis sed adipisci atque culpa!
       </article>
   </section>
   <section class="secundario">
