--- a/index.html
+++ b/index.html
@@ -87,19 +87,17 @@
 </section>
 
 <section > 
-    <article id="artigo">
-        <p>I've always had a lot of ease in learning, and I always thought it was good to have new challenges, bored with simple things. In the course of Trybe tedio does not happen, I am always being pretended to the maximum. The intensity at which the content is presented follows a frenetic speed 200km/h. Anyone committed has a prejudge.</p>
+    <article class="lado-esquerdo">
+      <p>I've always had a lot of ease in learning, and I always thought it was good to have new challenges, bored with simple things. In the course of Trybe tedio does not happen, I am always being pretended to the maximum. The intensity at which the content is presented follows a frenetic speed 200km/h. Anyone committed has a prejudge.</p>
     </article>  
-</section>
 
-<section>
-  <aside>
-    <p>In the first project within Trybe, I felt like the union of students, together with this method of active teaching helps us to learn quickly. Putting our knowledge into practice in something more concrete as a project gave me the clarity of how much I had already learned!</p>
-  </aside>
+   <aside class="lado-direito">
+     <p>In the first project within Trybe, I felt like the union of students, together with this method of active teaching helps us to learn quickly. Putting our knowledge into practice in something more concrete as a project gave me the clarity of how much I had already learned!</p>
+   </aside>
 </section>
 
 <div>
-    <footer id="rodape">
+    <footer id="rodape" class="artigos">
       <nav id="links_externos">
         <ul>
             <li>
