--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <body>
     <header id="cabecalho">
       <h1 id="titulo">Lições aprendidas - Trybe</h1>
-      <section id="section_up"><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
+      <a href="https://www.betrybe.com/" target="_blank">Home</a></p>
         <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
-      </section>
-    </header>
+      </header>
     <nav>
     
-      <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
-        <p><a href="https://www.linkedin.com/in/fasouzarj" target="_blank">Flávio Alves</a></p>
+      <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves de óculos escuros" />
+      <p><a href="https://www.linkedin.com/in/fasouzarj" target="_blank">Flávio Alves</a></p>
       
     </nav>
       <h2>Lições</h2>
