--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    </h2>
   </div>
 
-  <div class="tabela">
+  <div class="tabela"></div>
       <h2>
           <ul id="licoes_a_aprender">
               <li>Lógica de Programação</li>
@@ -98,13 +98,13 @@
 
 <div>
     <footer id="rodape" class="artigos">
-      <nav id="links_externos">
-        <ul>
+      <nav>
+        <ul id="links_externos">
             <li>
                 <a href="https://www.linkedin.com/in/hugo-maximiano-brito-62ab7a190/" target="_blank">Meu Linkkedin (opens new window)</a> 
             </li>
             <li>
-                <a href="https://github.com/hugomaximiano" target="_blank"> Meu GitHub</a>
+                <a href="https://github.com/hugomaximiano" target="_blank"> Meu GitHub (opens new window)</a>
             </li>
         </ul>
 
