push pra testar se o usuario github esta OK

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
                 <!-- Requisito 09 - OK -->
             <aside class="lado-direito">
-                <h2>Trilhando o Aprendizado</h2>
+                <h2 class=".italico">Trilhando o Aprendizado</h2>
                 <section>
-                    <p>
+                    <p class=".italico">
                         NO PAINS, NO GAINS. If little labour, little are our gains: Man's fate is according to his pains. — Hesperides 752.
                     </p>
                 </section>
@@ -142,7 +142,7 @@
 <!-- OK 15 - classes "lado-esquerdo" e "lado-direito" -->
 <!-- OPCIONAL -->
 <!-- Na página do MEU Pull Request adicione a label de "code-review" e marque os colegas
-    * no menu da direita clique em "Labels" e escolah a label [code-review]
+    * no menu da direita clique em "Labels" e escolha a label [code-review]
     * no menu da direita clique em "Assignees" e escolha meu usuário
     * no menu da direita cleque no link do "Reviewers" e digite students, selecione o time [tryber/students-sd-x] -->
 <!-- Form: https://be-trybe.typeform.com/to/ZTeR4IbH -->
