--- a/index.html
+++ b/index.html
@@ -25,18 +25,49 @@
     <nav>
         <h4>
             <a class="bot-nav" href="">QUEM SOU EU.</a>
-            <a class="bot-nav" href="">APRENDISADO.</a>
+            <a class="bot-nav" href="">APRENDIZADO.</a>
             <a class="bot-nav" href="">CONTATOS.</a>
             <a class="bot-nav" href="">CADASTRE-SE.</a>
         </h4>  
     </nav>
-    <main class="img-main">
-        <h2>
-            QUEM SOU EU.
-
-        </h2>
+    <main >
+        <div">
+            <img id="minha_foto" src="/imagens/IMG_20210714_123014_761.jpg" alt="">
+            <div class="div-eu">
+                <h2>QUEM SOU EU.</h2>
+                <p>
+                
+                </p>
+            </div>
+        </div>
 
     </main>
+
+    <section>
+        <h3>APRENDIZADO.</h3>
+        <div>
+            <a class="licoes_aprendidas" href="https://pt.wikipedia.org/wiki/Unix"target="_bank">
+                <li>Unix.</li></a>  
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/git/" target="_bank">
+                <li>Git.</li></a>            
+            <a class="licoes_aprendidas" href="https://github.com/" target="_bank">
+                <li>GitHub.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/soft-skills/" target="_bank">
+                <li>Soft skills.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/html/" target="_bank">
+                <li>HTML.</li></a>            
+            <a class="licoes_aprendidas" href="https://www.w3schools.com/html/html5_semantic_elements.asp" target="_bank">
+                <li>HTML Semantico.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/css/" target="_bank">
+                <li>CSS.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/ferramentas/slack/" target="_bank">
+                <li>Slack.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/ferramentas/vs-code-guia-completo/" target="_bank">
+                <li>VS Code.</li></a>            
+            <a class="licoes_aprendidas" href="https://blog.betrybe.com/ferramentas/zoom-meeting/" target="_bank">
+                <li>Zoom</li></a>                      
+        </div>
+    </section>
 
 </body>
 </html>
