--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <body>
       <header>
       <div id="cabecalho">
+        <div>
         <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
-        <nav>
+        <nav id="link">
           <a href="https://github.com/LucasBertarelli" target="blank">Github</a>
         </nav>
       </div>
-      <div>
-        <img src="foto.jpg" id="minha_foto">
       </div>
+        <img src="foto.jpg" id="minha_foto">
       </header>
-      <section id="secao1">
+      <section>
       <p><h3>Lições Aprendidas</h3></p>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
@@ -31,8 +31,6 @@
           <li>HTML Semântico</li>
           <li>JavaScript</li>
         </ol>
-      </section>
-      <div id="div1">
       <p><h3>Lições a aprender</p></h3>
       <ul id="licoes_a_aprender">
           <li>Aprofundamento em JavaScript</li>
@@ -46,7 +44,7 @@
           <li>Responsivo</li>
           <li>JavaScript Assíncrono</li>
       </ul>
-    </div>
+    </section>
       <article id="artigo"><p><h3>Como cheguei na Trybe?</h3></p>
       <p>Tenho 34 anos, sou pai de uma linda menina de 7 anos, chamada Lara.<br> Já trabalhei com muita coisa, e tenho formação em música.<br> Nasci em São Paulo capital, onde vivo até hoje.<br> Há muito tempo tenho sentido vontade de voltar a estudar.<br> E a Trybe surgiu em minha vida no melhor momento.<br> Decidi embarcar nessa e daqui só saio quando o curso terminar!</p></article>
       <aside id="aside1">
