ajustes de semantica

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div>
         <h1 id="titulo">Lessons Learned - Lucas Bertarelli</h1>
         <nav id="link">
-          <a href="https://github.com/LucasBertarelli" target="blank">Github</a>
+          <a href="https://github.com/LucasBertarelli" target="blank" >Github</a>
         </nav>
       </div>
       </div>
-        <img src="foto.jpg" id="minha_foto">
+        <img src="foto.jpg" alt="Foto do Lucas" id="minha_foto">
       </header>
       <section>
-      <p><h3>Lições Aprendidas</h3></p>
+      <p><h2>Lições Aprendidas</h2></p>
       <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
